fix: Wrap modified tag scope

--- a/src/style.scss
+++ b/src/style.scss
@@ -59,7 +59,7 @@
       background-color: rgba(255, 0, 0, .1);
     
       span.modified {
-        background-color: rgba(255, 0, 0, .2);
+        background-color: rgba(255, 0, 0, .15);
       }
 
       code::before {
@@ -71,7 +71,7 @@
       background-color: rgba(0, 255, 128, .1);
   
       span.modified {
-        background-color: rgba(0, 255, 128, .2);
+        background-color: rgba(0, 255, 128, .15);
       }
 
       code:before {
